# simbirsoft

./: README.md  bank_operations.py  base_page.py  customer_page.py  login_page.py  pyproject.toml  test_bank.py  transactions_page.py  urls.py  utils.py
.github/workflows/: pylint.yml
